--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <a href="https://www.se.com/us/en/work/campaign/innovation/overview.jsp">Solutions</a>
       <a href="https://www.se.com/us/en/work/products/master-ranges/">Services</a>
       <a href="https://www.se.com/us/en/work/campaign/innovation/overview.jsp">Programs</a>
-      <a href="https://www.se.com/us/en/work/campaign/innovation/overview.jsp">Support</a>
-      <a href="https://www.se.com/in/en/work/campaign/innovation/buildings.jsp">About Us</a>
+      <a href="index2.html">Support</a>
+      <a href="index1.html">Login/Register</a>
 
     </div>
     <div class="slider" width="100">
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="image/image1.jpg" height="400px" width="100%">
+          <img src="image/image11.jpg" height="400px" width="100%">
           <div class="text">Caption Text</div>
         </div>
         <div class="mySlides fade">
